deployment/staging/api-serve-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-serve
  namespace: staging
spec:
  selector:
    matchLabels:
      app: api-serve
  template:
    metadata:
      labels:
        app: api-serve
    spec:
      containers:
      - name: ori-api
        image: ontola/ori_api:9-serve
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /www/data/id
          name: apidata
      volumes:
      - name: apidata
        persistentVolumeClaim:
          claimName: apidata
      nodeSelector:
        cloud.google.com/gke-nodepool: persistent
