deployment/staging/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: staging
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: openstatefoundation/open-raadsinformatie-backend
        imagePullPolicy: Always
        name: backend
        volumeMounts:
        - mountPath: /opt/ori/data
          name: oridata
        resources:
          requests:
            memory: 120Mi
          limits:
            memory: 300Mi
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      volumes:
      - name: oridata
        persistentVolumeClaim:
          claimName: oridata
      nodeSelector:
        cloud.google.com/gke-preemptible: "true"
