deployment/staging/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-serve
  namespace: staging
spec:
  selector:
    app: api-serve
  ports:
  - name: "api"
    port: 80
    targetPort: 80
