deployment/staging/elastic-discovery-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-discovery
  namespace: staging
spec:
  selector:
    app: elastic
  type: ClusterIP
  ports:
  - name: "transport"
    port: 9300
    targetPort: 9300
    protocol: TCP
