deployment/staging/elastic-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic
  namespace: staging
spec:
  selector:
    app: elastic
  type: ClusterIP
  ports:
  - name: "http"
    port: 9200
    targetPort: 9200
