deployment/staging/endpoints-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: endpoints
  namespace: staging
spec:
  selector:
    app: endpoints
  type: ClusterIP
  ports:
  - name: "http"
    port: 8000
    targetPort: 8000
    protocol: TCP
