deployment/staging/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: staging
spec:
  selector:
    app: postgres
  ports:
  - name: "postgres"
    port: 5432
    targetPort: 5432
