deployment/staging/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: staging
spec:
  selector:
    app: redis
  ports:
  - name: "redis"
    port: 6379
    targetPort: 6379
