deployment/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/default-backend: nginx
    kubernetes.io/ingress.global-static-ip-name: nl
  name: ingress
  namespace: staging
spec:
  rules:
  - host: beta.openraadsinformatie.nl
    http:
      paths:
      - path: /v1/elastic/(.*)
        backend:
          serviceName: endpoints
          servicePort: 8000
  - host: beta.openstateninformatie.nl
    http:
      paths:
      - path: /v1/elastic/(.*)
        backend:
          serviceName: endpoints
          servicePort: 8000
  tls:
  - secretName: tls-certificate
